Move source to src/, update build config and paths
Renamed index.ts to src/index.ts and updated Dockerfile, tsconfig.json, and package.json to reflect the new source directory structure. Adjusted build and file inclusion settings for consistency. Also updated .claude/settings.local.json to allow additional Bash commands.

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "ai-tools"
   ],
   "type": "module",
+  "module": "./src/index.ts",
+  "main": "dist/index.js",
   "bin": {
     "mcp-server-event-horizon": "dist/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
