Add GitHub templates, docs, and ignore LaTeX files
Introduces issue and pull request templates for bug reports, feature requests, algorithm improvements, and Smithery deployment issues. Adds CONTRIBUTING.md and SECURITY.md for contribution and security guidelines. Updates .gitignore to exclude LaTeX and document files. Adds a VS Code workspace file and a project image.

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,19 @@ test_*.json
 
 # MCP specific
 mcp-server-*.tgz
+
+# LaTeX and document files
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.synctex.gz
+*.toc
+*.out
+*.nav
+*.snm
+*.vrb
+bose_hubbard_solution.*
+*.tex
+*.pdf
